# django-mini-fastapi

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
demo/: intro.py
django_mini_fastapi/: .gitpod.yml  __init__.py  api.py  base.py  enums.py  route.py  utils.py
django_mini_fastapi/fastapi/: README.md  __init__.py  applications.py  concurrency.py  datastructures.py  exception_handlers.py  exceptions.py  mock.py  param_functions.py  params.py  routing.py  utils.py
django_mini_fastapi/fastapi/dependencies/: models.py  utils.py
django_mini_fastapi/fastapi/openapi/: docs.py  models.py  utils.py
django_mini_fastapi/fastapi/security/: api_key.py  base.py  http.py  oauth2.py  open_id_connect_url.py
tests/: test_intro.py
