[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django_mini_fastapi"
authors = [{name = "toki", email = "toki.kanno@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dynamic = ["version", "description"]
requires-python = ">=3.6"
dependencies = [
    "django >= 1.11",
    "pydantic >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0",
]

[project.urls]
Home = "https://github.com/tokikanno/django-mini-fastapi"
